# label-verification

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
logic/: form510031_reader.py  label_rules.py  ocr.py  required_text.py  required_text.yaml
notes/journals/: 2026_02_13.md
notes/pages/: ChatGPT-Requirements.md  Grok-Requirements.md
tests/: test_e2e_api.py
tests/fixtures/: README.md
web/: index.html
